# PINN-Thesis

./: .gitignore  API_GUIDE.md  README.md  add_problem.py  possible_improvements.md  pyproject.toml  requirements.yaml  train.py  visualize.py
1d_bratu/: README.md  api.py  models.py  problem.py  train.py  utils.py  visualize.py
configs/: baseline.yaml  bratu.yaml  generic.yaml  gray_scott.yaml
core/: BaseProblemAPI.py  train.py  utils.py
gray_scott/: api.py  models.py  plot.py  problem.py  train.py  utils.py  visualize.py
pinn/: cli.py  registry.py
pinn/commands/: add.py  init.py  train.py  visualize.py
pinn/templates/zero/: models.tpl
templates/zero/: README.tpl  api.tpl  plot.tpl  problem.tpl
unified/: train.py
