[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-framework"
version = "0.1.0"
description = "Modular PINN CLI framework"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer[all]",
    "pyyaml",
    "torch",
    "wandb",
]

[project.scripts]
pinn = "pinn.cli:app"

# ---------------------------------------------------
# PACKAGE DISCOVERY
# ---------------------------------------------------

[tool.setuptools]
packages = [
    "pinn",
    "pinn.commands",
    "core",
]

[tool.setuptools.package-data]
"pinn.templates.zero" = ["*.tpl", "*.yaml", "*.md"]